feat: actually use stdlib

--- a/003_stdlib/index.html
+++ b/003_stdlib/index.html
@@ -12,6 +12,8 @@
 	<div>
 		4 + 1 = <span id="result1">?</span>
 	</div>
+	<div id="result2">?</div>
+	<div id="result3">?</div>
 
 	<script type="module" src="./script.js"> </script>
 </body>
