feat: draw on canvas pixel-by-pixel from wasm

--- a/004_input/index.html
+++ b/004_input/index.html
@@ -10,5 +10,6 @@ body {
 </head>
 <body>
 	<div id="result">?</div>
+	<canvas id="canvas"></canvas>
 	<script type="module" src="./script.js"> </script>
 </body>
