feat: request fetching GET request from wasm and receive response through Uint8Array

--- a/006_networking/index.html
+++ b/006_networking/index.html
@@ -10,6 +10,6 @@ body {
 </head>
 <body>
 	<div id="result">?</div>
-	<button id="get">GET</div>
+	<button id="get">GET</button>
 	<script type="module" src="./script.js"> </script>
 </body>
