feat: implement "sleep" (with callback)

--- a/006_networking/index.html
+++ b/006_networking/index.html
@@ -11,5 +11,6 @@ body {
 <body>
 	<div id="result">?</div>
 	<button id="get">GET</button>
+	<button id="sleep">sleep (with callback)</button>
 	<script type="module" src="./script.js"> </script>
 </body>
