feat: add POST requests to networking example

--- a/006_networking/index.html
+++ b/006_networking/index.html
@@ -11,6 +11,7 @@ body {
 <body>
 	<div id="result">?</div>
 	<button id="get">GET</button>
+	<button id="post">POST</button>
 	<button id="sleep">sleep (with callback)</button>
 	<script type="module" src="./script.js"> </script>
 </body>
