--- a/006_networking/index.html
+++ b/006_networking/index.html
@@ -6,6 +6,26 @@ body {
 	background-color: #1e1e2e;
 	color: #cdd6f4;
 }
+
+button {
+	padding: 10px 20px;
+	font-size: 16px;
+	color: #cdd6f4;
+	background-color: #181825;
+	border: none;
+	border-radius: 5px;
+	cursor: pointer;
+	transition: background-color 0.3s, box-shadow 0.3s;
+}
+
+button:hover {
+	background-color: #313244;
+	box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+}
+
+button:active {
+	background-color: #313244;
+}
 </style>
 </head>
 <body>
